--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -1164,7 +1164,7 @@ $$
 \frac{p-q}{p+q}.
 $$
 <p><a
-href="javascript:hideShow('lab1')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
 class="ans" id="lab1">
 Let $y_i$ be the lead of $A$ over $B$
 after $i$ ballot papers have been counted. If we
@@ -1207,7 +1207,7 @@ So the required probability is $\frac{p-q}{p+q},$ as required.
 </center>
 
 <p><a
-href="javascript:hideShow('lab2')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
 class="ans" id="lab2">This is just the complement of the last problem. So the answer is $1-\frac{a-b}{a+b}=\frac{2b}{a+b}.$</div></p>
 
 </p>
@@ -1217,7 +1217,7 @@ class="ans" id="lab2">This is just the complement of the last problem. So the an
 <p>
 <b>EXERCISE 6:</b>&nbsp;Let $a,b&gt;0.$ Show that the number of paths from $(0,0)$ to $(n,a)$ that are
 always $&gt;-b$ is $N_{n,a}-N_{n,a+2b}.$ <p><a
-href="javascript:hideShow('lab3')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
 class="ans" id="lab3">
 #{paths from $(0,0)$ to $(n,a)$ that are always $&gt;-b$}<br>
 =#{paths from $(0,0)$ to $(n,a)$}-#{paths from $(0,0)$ to $(n,-a-2b)$} by reflection principle<br>
@@ -1234,7 +1234,7 @@ class="ans" id="lab3">
 from $(0,0)$ to $(n,a)$ that are
 always $&lt;b$ is $N_{n,a}-N_{n,2b-a}.$
 <p><a
-href="javascript:hideShow('lab4')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
 class="ans" id="lab4">
 #{paths from $(0,0)$ to $(n,a)$ that are always $&lt;b$}<br>
 =#{paths from $(0,0)$ to $(n,a)$}-#{paths from $(0,0)$ to $(n,2b-a)$} by reflection principle<br>
@@ -1249,7 +1249,7 @@ class="ans" id="lab4">
   that attain height $a$  and <i>then</i>  attain height $-b$  before finishing at $(n,c),$  is $N_{n,2a+2b+c}.$ 
  The paths may have also attained height $-b$  before attaining height  $a.$
 <p><a
-href="javascript:hideShow('lab5')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
 class="ans" id="lab5">
 <center>
 <table width="100%">
@@ -1266,20 +1266,30 @@ class="ans" id="lab5">
 
 <p>
 <b>EXERCISE 9:</b>&nbsp;Let $a&gt;c&gt;0$ and $b&gt;0.$ Show that the number of
-paths from $(0,0)$ which touch the
+paths from $(0,0)$ which hit the
 horizontal line at height $a$ and then lead to $(n,c)$
 without having touched the horizontal line at height $-b$ is  
 $N_{n,2a-c}-N_{n,2a+2b+c}.$ (Note that the path may touch
 the horizontal line at height $-b$ <i>before</i> hitting
 the line at height $a.$)<p><a
-href="javascript:hideShow('lab6')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
 class="ans" id="lab6">
-Let $A = $ {paths from $(0,0)$ which touch the
+Let $A = $ {paths from $(0,0)$ which hit the
 horizontal line at height $a$ and then lead to $(n,c)$ }.
-Let $B = ${paths in $A$  that do not attain height $-b$  <i>after</i>  attaining height $a$ }.
+Let $B = ${paths in $A$  that  attain height $-b$  <i>after</i>  attaining height $a$ }.
 <p></p>
 Then the answer is $|A|-|B|.$   By reflection principle $|A| = N_{n,2a-c}$  and $|B| = N_{n,2a+2b+c}.$
-Hence the result.
+Hence the result. 
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/flucex9.png"></th>
+</tr>
+<tr>
+<th>How $|B|$  is found by 2 reflections</th>
+</tr>
+</table>
+</center>
 </div></p>
 </p>
 
@@ -1290,7 +1300,7 @@ Hence the result.
 to $(2n+2,0)$ with all interior vertices $&gt;0$ as there
 are paths from (0,0) to $(2n,0)$ where all interior
 vertices are $\geq 0.$<p><a
-href="javascript:hideShow('lab7')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
 class="ans" id="lab7">
 Any path from (0,0)
 to $(2n+2,0)$ with all interior vertices $&gt;0$ must
@@ -1315,7 +1325,7 @@ exactly $r$ returns to the origin equals the probability
 that a return occurs at time $2n$  preceded by at
 least $r$ returns.
 <p><a
-href="javascript:hideShow('lab8')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
 class="ans" id="lab8">False. Consider $r=1$  and $n=2.$  Then the first probability is $\frac 12.$ 
  But the second probability is $\frac 14.$</div></p>
 
@@ -1336,7 +1346,7 @@ $B = $ the path passes through $(2n,2k).$
 </blockquote>
 Show that $P(A) = P(B).$  Is this true if $k\leq 0?$  Is it true if $k&gt;n?$
 <p><a
-href="javascript:hideShow('lab9')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
 class="ans" id="lab9">
 For $k\in\{1,...,n\},$  the result follows directly from reflection principle. The result fails if $k\leq 0.$ 
  One counterexample, if when $k=-10$  and $n=1.$  The result holds if $k&gt;n,$  because then $P(A)=P(B)=0.$
@@ -1364,7 +1374,7 @@ continued for two more time units without hitting
 <p></p>
 Hence $|A|=|B|.$ 
 <p><a
-href="javascript:hideShow('lab10')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
 class="ans" id="lab10">The "$|B|\leq |A|$ " argument is wrong. What it says is: number of paths <i>of length 8</i>
  that never return to 0 is $\leq |A|$ ".</div></p> 
 </p>
@@ -1384,7 +1394,7 @@ class="ans" id="lab10">The "$|B|\leq |A|$ " argument is wrong. What it says is: 
 </center>
 
 <p><a
-href="javascript:hideShow('lab11')"><b>Answer:</b></a><div
+href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
 class="ans" id="lab11">
 Let the total number of balls in either box be $k.$  Let there be $w_i$  white balls in box $i.$  Then the
  given condition says 
