--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -999,7 +999,8 @@ $$\forall n\in{\mathbb N}~~\forall k\in\{0,...,n\}~~|A_{2n,2k}|=N_{2k,0}\times N
 <p></p>
 We shall show the case for $k=n.$  The $k=0$  is similar. 
 Note that $k=n$ means the path is always above the $x$-axis (though it may touch the
- axis). We shall convert it bijectively into a $(2n+1)$-length  path not returning to 0. This conversion is done by
+ axis). We shall convert it bijectively into a $(2n+1)$-length  positive path not returning to
+ 0. This conversion is done by
  shifting the path 1 unit upwards and to the right, and joining $(0,0)$  with $(1,1).$  Click on the figure below
  to see the conversion as an animation.
 <center>
@@ -1007,15 +1008,16 @@ Note that $k=n$ means the path is always above the $x$-axis (though it may touch
 <source type="video/webm" src="image/anim.webm"></source>
 </video>
 </center>
-The number of $(2n+1)$-length paths not returning to 0 is the same as the number of $2n$-length paths not returning
- to 0 (since a path cannot return to 0 at time $2n+1$). So the number is
+The number of $(2n+1)$-length paths not returning to 0 is twice  the number of $2n$-length paths not returning
+ to 0 (since the last step is arbitrary). Out of these exactly half is positive. So the number of
+ $(2n+1)$-length positive paths not returning to 0 is
  $N_{2n,0}=N_{2k,0}\times N_{2n-2k,0}$, as required. 
 <p></p>
 
 <u><b>Case 2: $1\leq k\leq n-1$</b></u>:
 <p></p>
 Here we are considering paths with at least one 0-return. We shall group them by the time of their first 0-return and 
-where the return occurs from the positive or the negative side. 
+whether the return occurs from the positive or the negative side. 
 <p></p>
 Let's warm up by looking at an example with $n=7$ and $k=4.$
 
@@ -1034,9 +1036,9 @@ Let's warm up by looking at an example with $n=7$ and $k=4.$
 Here the first 0-return occurs at 4,
 and from the positive side. 
 <p></p>
-Let $B_{a,t}= $ {all $a$-length paths from (0,0) that first 0-return at time $t$  from positive side}.
+Let $B_{a,t}= $ {all $a$-length paths from (0,0) with first 0-return at time $t$  from positive side}.
 <p></p>
-Let $C_{a,t}= $ {all $a$-length paths from (0,0) that first 0-return at time $t$  from negative side}.
+Let $C_{a,t}= $ {all $a$-length paths from (0,0) with first 0-return at time $t$  from negative side}.
 <p></p>
 Note the following points about these sets:
 <ul>
@@ -1050,7 +1052,7 @@ Note the following points about these sets:
 Do you see <a href="javascript:hideShow('newwhy');">why</a>
 <div id="newwhy" style="display:none;background-color:#ffcccc;">
 If the first 0-return from positive side is later than $2k,$  then we have already spent more
- than $2k$  time units above the $x$-axis. SImilarly, if the first 0-return is later
+ than $2k$  time units above the $x$-axis. Similarly, if the first 0-return is later
  than $2n-2k$  from the negative side, then we have less than $2k$  time units left, and
  we have not spent any time above the $x$-axis yet!</div> it is
  enough to take $r$  up
@@ -1065,8 +1067,21 @@ $$|A_{2n,2k}| = \sum_{r=1}^k |A_{2n,2k}\cap B_{2n,2r}| + \sum_{r=1}^{n-k} |A_{2n
 Now we shall find $|A_{2n,2k}\cap B_{2n,2r}|$  and $|A_{2n,2k}\cap C_{2n,2r}|$  separately. 
 <p></p>
 The paths in $A_{2n,2k}\cap B_{2n,2r}$  are positive up to time $2r$, when they return to 0 for the first time,
- and then during the remaining $2n-2r$  times units  spend exactly $2k-2r$  time units in the positive side. So
- $$|A_{2n,2k}\cap B_{2n,2r}| = |B_{2r,2r}|\times |A_{2n-2r,2k-2r}|.$$
+ and then during the remaining $2n-2r$  times units  spend exactly $2k-2r$  time units in the positive side.
+
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/postep.png"></th>
+</tr>
+<tr>
+<th>A typical path in $A_{12,8}\cap B_{12,6}.$</th>
+</tr>
+</table>
+</center>
+ So
+ $$|A_{2n,2k}\cap B_{2n,2r}| = \underbrace{|B_{2r,2r}|}_{\small red}\times
+ \underbrace{|A_{2n-2r,2k-2r}|}_{\small green}.$$
 <img src="image/alert.png">This is the crucial step. Take time to understand it! 
 <p></p>
 Similarly
@@ -1114,7 +1129,7 @@ blue dots in the $n$-th
 Take any $k\in\{1,...,n-1\}.$
 <p></p>
 From the <font color="#ff0000">master equality</font>, the required number is 
- $$|A_{2n,2k}| = \frac 12 \sum_{r=1}^k |Z_{2r}| N_{2n-2k}N_{2k-2r}+ \frac 12\sum_{r=1}^{n-k}|Z_{2r}| N_{2k,0}N_{2n-2k-2r,0}.$$
+ $$|A_{2n,2k}| = \frac 12 \sum_{r=1}^k |Z_{2r}| N_{2k-2r,0}N_{2n-2k,0}+ \frac 12\sum_{r=1}^{n-k}|Z_{2r}| N_{2k,0}N_{2n-2k-2r,0}.$$
 Move the $r$-free terms  out of the summations:
  $$|A_{2n,2k}| = \frac 12 N_{2n-2k,0}\sum_{r=1}^k |Z_{2r}| N_{2k-2r,0}+ \frac 12N_{2k,0}\sum_{r=1}^{n-k}|Z_{2r}| N_{2n-2k-2r,0}.$$
 Of course, you can now use the formula for $|Z_{2r}|$  from the <b>first 0-return theorem</b> and
