--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -1190,11 +1190,11 @@ The total number of outcomes is $N_{p+q,p-q} = {p+q\choose p}
 = \frac{(p+q)!}{p!q!}.$ 
 <p></p>
 The
-favourable oucomes correspond to the paths that always remains
-positive 0 after starting from (0,0).
+favourable oucomes correspond to the paths that always remain
+positive after starting from (0,0).
  These paths must visit (1,1) after $(0,0).$ 
 <p></p>
-Hence #{paths from (0,0) to $(p+q,p-q)$ ever returning to 0}
+Hence #{paths from (0,0) to $(p+q,p-q)$ never returning to 0}
 = #{paths from (1,1) to $(p+q,p-q)$ never visiting  0}<br>
 = #{paths from (1,1) to $(p+q,p-q)$}
 - #{paths from (1,1) to $(p+q,p-q)$  visiting  0}<br>
