--- a/prob1_2024/indep.html
+++ b/prob1_2024/indep.html
@@ -371,7 +371,7 @@ The proof is easy if $A_1$  and $A_2$  are both finite.
 <p></p>
 For the case where at least one of $A_1,A_2$  is infinite, we need to use the fact that 
 infinite series of nonnegative terms may be 
-rearranged without changing the value of the series. 
+<a href="series.html">rearranged without changing the value</a> of the series. 
 <b><i>[QED]</i></b>
 </p>
 
