--- a/prob1_2024/notes.html
+++ b/prob1_2024/notes.html
@@ -30,7 +30,7 @@ hideShow = function(lb) {
    if(me.style.display=="block"){
      me.style.display="none";
    }
-   else if (me.style.display=="none"){
+   else {
      me.style.display="block";
    }
 }
@@ -72,13 +72,17 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
   });
 </script>
 <style>
-body {
+body,table {
   margin: 0;
   font-size: 40;
   //background: #000;
   //color: #fff;
 }
 
+.ans {
+  display:none;
+  background: #ccffcc;
+}
 
 .sticky {
   position: fixed;
@@ -97,6 +101,7 @@ body {
 }
 
 .scrpt {
+  margin:10px;
   border-left: 5px solid black;
 }
 
@@ -169,6 +174,9 @@ Before midsem:
 <li>
 <a href="indep.html">Independence</a>
 </li>
+
+<li>
+<a href="vit.html">First taste of measure theory</a> (important, but not in syllabus)</li>
 
 <li>
 <a href="bayes.html">Conditional probability</a>
