--- a/prob1_2024/basic.html
+++ b/prob1_2024/basic.html
@@ -1999,8 +1999,10 @@ occurred is $p_1-2p_2+3p_3.$ For $n$ events it will be
 $\sum_{i=1}^n (-1)^{i-1} ip_i.$ For exactly $r$ out
 of $n$ events:
 $$
-p_r - (r+1)p_{r+1} + (r+2)p_{r+2} -+\cdots.
-$$</div></p>
+p_r - \binom{r+1}{r}p_{r+1} + \binom{r+2}{r}p_{r+2} -+\cdots.
+$$
+[Thanks to Ahan Chakraborty for pointing out a mistake here. It has now been corrected.]
+</div></p>
 </p>
 
 <p></p>
