--- a/prob1_2024/indep.html
+++ b/prob1_2024/indep.html
@@ -481,15 +481,15 @@ href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
 class="ans" id="lab1">
 Let $f = P($Elmer beats father$),$ and $c =
 P($Elmer beats champion$).$ Then Elmer's chance of
-winning for the father-champion-father case is $2fc(1-f) +
-f^2(1-c) + f^2c=A,$ say.
+winning for the father-champion-father case is $2fc(1-f) 
+ + f^2c=A,$ say.
 <p></p>
 The winning probability for the other case is: $2cf(1-c) +
-c^2(1-f) + c^2f=B,$ say.
+  c^2f=B,$ say.
 <p></p>
 We have $f &gt; c.$ 
 <p></p>
-So $A-B = (f-c)(f(1-c)+c(1-f)) &gt; 0.$ Hence Elmer should play father-champion-father.
+So $A-B &lt; 0.$ Hence Elmer should play champion-father-champion.
 </div></p>
 
 </p>
