--- a/prob1_2024/indep.html
+++ b/prob1_2024/indep.html
@@ -490,6 +490,8 @@ The winning probability for the other case is: $2cf(1-c) +
 We have $f &gt; c.$ 
 <p></p>
 So $A-B &lt; 0.$ Hence Elmer should play champion-father-champion.
+<p></p>
+[Corrected a mistake pointed out by Arnab Sanyal.]
 </div></p>
 
 </p>
