--- a/prob1_2024/bayes.html
+++ b/prob1_2024/bayes.html
@@ -30,7 +30,7 @@ hideShow = function(lb) {
    if(me.style.display=="block"){
      me.style.display="none";
    }
-   else if (me.style.display=="none"){
+   else {
      me.style.display="block";
    }
 }
@@ -72,13 +72,17 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
   });
 </script>
 <style>
-body {
+body,table {
   margin: 0;
   font-size: 40;
   //background: #000;
   //color: #fff;
 }
 
+.ans {
+  display:none;
+  background: #ccffcc;
+}
 
 .sticky {
   position: fixed;
@@ -97,6 +101,7 @@ body {
 }
 
 .scrpt {
+  margin:10px;
   border-left: 5px solid black;
 }
 
@@ -236,7 +241,7 @@ information. The new notation
 is $P(\mbox{triangle}|\mbox{green}).$ We call it the
 <b>conditional probability</b> of the selected shape being a triangle
 <b>given</b> that it is green.
- ///
+ ■
 </p>
 
 <p></p>
@@ -374,7 +379,7 @@ event[i] = (first.draw=='g' &amp;&amp; second.draw=='g')
 }
 mean(event)
 `));"/>
- ///
+ ■
 </p>
 Often, in case of multistage random experiments, it is easier to
 think about the diagram than about the definition of conditional
@@ -614,7 +619,7 @@ from start to B <i>through</i> $A.$
 Here $P(A \cap B)=0.1 \times 0.95.$
 <p></p>
 So now you can find $P(A|B)=\frac{P(A \cap B)}{P(B)}.$
- ///
+ ■
 </p>
 
 <p></p>
@@ -678,7 +683,7 @@ the (conditional) probability that we had exactly 4 red balls at
 the 6-th stage?</li>
 
 </ol>
- ///
+ ■
 </p>
 
 <p></p>
@@ -759,7 +764,7 @@ everybody.
 <p></p>
 However, one must understand that the real situation is far too
 complex to be captured adequately by Polya's urn model.
- ///
+ ■
 </p>
 
 <p></p>
@@ -778,7 +783,7 @@ which are red and the rest green. A ball is drawn at random,
 removed, and another ball of the opposite colour is added. Here
 red balls play the role of particles in the first container, and
 green balls those in the other.
- ///
+ ■
 </p>
 
 <p></p>
@@ -1017,12 +1022,18 @@ name="Problems for practice">Problems for practice</a></h1>
 <p>
 <b>EXERCISE 5:</b>&nbsp;Is it true that $P(A|B)+P(A^c|B)=1?$  Is it true
 that $P(A|B)+P(A|B^c)=1?$
+<p><a
+href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+class="ans" id="lab1">Yes. Not necessarily.</div></p>
 
 </p>
 
 <p>
 <b>EXERCISE 6:</b>&nbsp;"It is possible to have events $A,B$ such that $P(A|B)=1$
 but $P(B|A)\neq 1$" Disprove or provide an example.
+<p><a
+href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+class="ans" id="lab2">Take $B\subseteq A$ with $P(A\setminus B)&gt;0.$</div></p>
 
 </p>
 
@@ -1032,6 +1043,10 @@ but $P(B|A)\neq 1$" Disprove or provide an example.
 <b>EXERCISE 7:</b>&nbsp;"It is possible to have events $A,B$ such that $P(A|B)&gt;0.99$
 but $P(B|A) &lt; 0.01$" Disprove or provide an example to
 this statement.
+<p><a
+href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+class="ans" id="lab3">$B=\{1\}$, $A = \{1,...,1000\}.$ The random
+experiment is to draw one element of $A$ with equal probabilities. </div></p>
 
 </p>
 
@@ -1050,6 +1065,9 @@ v_0u_{2n}+v_2 u_{2n-2} + \cdots + v_{2n} u_0 = 1.
 $$
 <p></p>
 
+<p><a
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+class="ans" id="lab4">Condition on the first time the path hits zero.</div></p>
 
 </p>
 
@@ -1058,6 +1076,9 @@ $$
 <p>
 <b>EXERCISE 9:</b>&nbsp;$P(A\cap B)&gt;0.$ Show that $P(A|B) = P(B|A)$ if and
 only if $P(A)=P(B).$
+<p><a
+href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+class="ans" id="lab5">Easy</div></p>
 
 </p>
 
@@ -1073,6 +1094,9 @@ device B has received a 1, what is the chance that it is
 uncorrupted?
 <p></p>
 
+<p><a
+href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+class="ans" id="lab6">$\frac{0.6\times0.95}{0.6\times0.95+0.4\times0.01}.$</div></p>
 
 </p>
 
@@ -1083,6 +1107,9 @@ uncorrupted?
 wrong, the patient dies with probability 50%. Even for a correct diagnosis
 the patient dies in 10% cases. Given that a patient has died find the
 conditional probability that the diagnosis was correct.
+<p><a
+href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+class="ans" id="lab7">$\frac{0.9\times0.1}{0.9\times0.1+0.1\times0.5}.$</div></p>
 
 </p>
 
@@ -1092,6 +1119,13 @@ conditional probability that the diagnosis was correct.
 <b>EXERCISE 12:</b>&nbsp;Two fair dice are rolled. What is the conditional probability
 that at least one shows a 6 given that the dice show different
 numbers?
+<p><a
+href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+class="ans" id="lab8">Let $A=${the dice show difference numbers},
+and $B=${at least one show a 6}. 
+<p></p>
+Then $P(A) = \frac{6\times 5}{6\times 6}$ and $P(A\cap B) =
+\frac{10}{6\times 6},$ because $A\cap B=${(1,6),...,(5,6)}\cup{(6,1),...,(6,5)}.</div></p>
 
 </p>
 
@@ -1103,6 +1137,10 @@ probability that the first one shows 6 given that the sum
 of the outcomes of the dice is $i?$ Compute for all possible
 values
 of $i.$
+<p><a
+href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+class="ans" id="lab9">$0$ for $i=2,...,6.$ Then, for $i=7,...,12$
+the conditional probability is $\frac{1}{13-i}.$</div></p>
 
 </p>
 
@@ -1128,6 +1166,9 @@ with $(i,j)$-th entry $p_{j-i}$
 whenever $j-i\in\{1,...,6\}$ and 0 else. Show that the probability that the counter
 arrives at 14 (starting from 1) in exactly 3 moves equals
 the $(1,14)$-th entry of $T^3.$
+<p><a
+href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+class="ans" id="lab10">$p_4p_6 + p_5p_5+p_6p_4.$</div></p>
 
 </p>
 
@@ -1158,6 +1199,9 @@ probability of the counter moving from $i$ to $j$ in
 exactly $k$ moves is the $(i,j)$-th entry of the matrix $A^k.$
 <p></p>
 
+<p><a
+href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+class="ans" id="lab11">Proof</div></p>
 
 </p>
 
@@ -1171,6 +1215,10 @@ balls. One urn is selected at random, and an SRSWR of
 size $n$ is drawn. All the $n$ balls are found to be
 red. One more ball is drawn from the same urn. Find  the
 conditional probability that this ball is also red.
+<p><a
+href="javascript:hideShow('lab12')"><b>Hint:</b></a><div
+class="ans" id="lab12">$\frac{1^{n+1} + 2^{n+1} +\cdots + N^{n+1}}{N(1^n + 2^n +\cdots + N^n)}.$
+</div></p>
 
 </p>
 
@@ -1188,6 +1236,9 @@ conditional probability that this ball is also red.
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
+class="ans" id="lab13">$\frac{6\times5\times9\times8}{15\times14\times13\times12}.$  Send to basic.</div></p>
 
 </p>
 
@@ -1203,6 +1254,21 @@ conditional probability that this ball is also red.
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+class="ans" id="lab14">
+WOR: $P($ exactly 3 white$)=\frac{4\times4\times8\times7\times6}{12\times11\times10\times9}.$
+<p></p>
+$P($ exactly 3 white and 1st,3rd white$)=\frac{2\times4\times8\times7\times6}{12\times11\times10\times9}.$
+<p></p>
+So the required conditional probability is $\frac 12.$
+<p></p>
+WR: $P($ exactly 3 white$)=\frac{4\times4\times8^3}{12^4}.$
+<p></p>
+$P($ exactly 3 white and 1st,3rd white$)=\frac{2\times4\times8^3}{12^4}.$
+<p></p>
+So the required conditional probability is again $\frac 12.$
+</div></p>
 
 </p>
 
@@ -1218,6 +1284,14 @@ conditional probability that this ball is also red.
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab15')"><b>Hint:</b></a><div
+class="ans" id="lab15">Model this as: toss a fair coin twice. Given that at least one is a head, what is the
+ conditional probability that the other is a tail? 
+<p></p>
+Answer is $\frac 23/\frac 34=\frac 23.
+$
+</div></p>
 
 </p>
 
@@ -1233,6 +1307,9 @@ conditional probability that this ball is also red.
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
+class="ans" id="lab16">$\frac 12.$</div></p>
 
 </p>
 
@@ -1248,6 +1325,10 @@ conditional probability that this ball is also red.
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab17')"><b>Hint:</b></a><div
+class="ans" id="lab17">$P($ exactly 2 white$)=\frac 13\times\frac 23\times\frac 34+\frac 13\times\frac 13\times\frac 14+
+\frac 23\times\frac 23\times\frac 14=\frac{11}{36}$</div></p>
 
 <p></p>
 $P($ exactly 2 white and white from $A$$)=\frac 13\times\frac 23\times\frac 34+\frac 13\times\frac 13\times\frac 14=\frac{7}{36}.$
@@ -1267,6 +1348,14 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab18')"><b>Hint:</b></a><div
+class="ans" id="lab18">$P($ 2nd and 3rd cards spades$)=\frac{13\times12}{52\times51}.$
+<p></p>
+$P($ All three spades$)=\frac{13\times12\times11}{52\times51\times50}.$
+<p></p>
+Hence the required probability is $\frac{11}{50}.$
+</div></p>
 
 </p>
 
@@ -1282,6 +1371,10 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab19')"><b>Hint:</b></a><div
+class="ans" id="lab19">
+</div></p>
 
 </p>
 
@@ -1297,6 +1390,21 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab20')"><b>Hint:</b></a><div
+class="ans" id="lab20">
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/csec.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+$0.85p+0.15\times0.96 = 0.98.$
+</div></p>
 
 </p>
 
@@ -1312,6 +1420,12 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab21')"><b>Hint:</b></a><div
+class="ans" id="lab21">(a) $0.36\times0.22.$
+<p></p>
+(b) $\frac{0.36\times0.22}{0.36\times0.22+0.30}.$
+</div></p>
 
 </p>
 
@@ -1327,6 +1441,17 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab22')"><b>Hint:</b></a><div
+class="ans" id="lab22">
+(a) $\frac{0.46\times0.35}{0.46\times0.35+0.3\times0.62+0.24\times0.58}.$
+<p></p>
+(b) $\frac{0.3\times0.62}{0.46\times0.35+0.3\times0.62+0.24\times0.58}.$
+<p></p>
+(c) $\frac{0.24\times0.58}{0.46\times0.35+0.3\times0.62+0.24\times0.58}.$
+<p></p>
+(d) $0.46\times0.35+0.3\times0.62+0.24\times0.58.$
+</div></p>
 
 </p>
 
@@ -1342,6 +1467,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab23')"><b>Hint:</b></a><div
+class="ans" id="lab23">(a) $\frac 25.$  (b) $\frac{2}{52}.$</div></p>
 
 </p>
 
@@ -1357,6 +1485,41 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab24')"><b>Hint:</b></a><div
+class="ans" id="lab24">Can be done directly by counting. Or stepwise using conditional probability. The event is
+ "Each of the fours hands has exactly one ace". 
+<p></p>
+
+<b>Direct counting:</b>  
+<ul>
+<li>Order the four aces: 4! ways</li>
+
+<li>Order the non-aces: 48! ways.</li>
+
+<li>Place the first ace among the first 12 non-aces: 13 ways.</li>
+
+<li>Place the second ace among the next 12 non-aces: 13 ways.</li>
+
+<li>Place the third ace among the next 12 non-aces: 13 ways.</li>
+
+<li>Place the fourth ace among the last 12 non-aces: 13 ways.</li>
+
+</ul> 
+Total number of ways: $4!\times48!\times 13^4.$
+<p></p>
+$|\Omega| = 52!.$  So the reqired probability is $\frac{4!\times48!\times 13^4}{52!}.$
+<p></p>
+
+<b>Using conditional probability:</b>
+$P(E_1E_2E_3E_4) = P(E_1)P(E_2|E_1)P(E_3|E_1E_2)P(E_4|E_1E_2E_3).$
+<p></p>
+Now $P(E_1) = \frac{4\times (48\times 47\times\cdots\times(48-12+1)}{52\times\times 51\times\cdots\times (52-13+1)}.$
+<p></p>
+Now $P(E_2|E_1)$ is similar except that now we start with a deck of 39 cards among which exactly 3 are aces. 
+<p></p>
+Similarly for the other two conditional probabilities. The last conditional probability is of course 1.  
+</div></p>
 
 </p>
 
@@ -1374,6 +1537,16 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab25')"><b>Hint:</b></a><div
+class="ans" id="lab25">Let $B_i=$ the event that $i$-th draw gives black. Similarly for $W_i.$  Then
+ in (a) we want $P(B_1B_2W_3W_4)=P(B_1)P(B_2|B_1)P(W_3|B_1B_2)P(W_4|B_1B_2W_3).$
+<p></p>
+Here $P(B_1) = \frac{7}{5+7}.$  Also $P(B_2|B_1) = \frac{9}{5+9}$, $P(W_3|B_1B_2) = \frac{5}{5+11}$  and $P(W_4|B_1B_2W_3) = \frac{7}{7+11}.$
+<p></p>
+In (b) the black balls could occur in ${4 \choose 2} = 6$ ways among the 4 draws. The probability of each of these 6
+ cases is the same as that in (a). So the answer is 6 times that of (a).
+</div></p>
 
 </p>
 
@@ -1389,6 +1562,23 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab26')"><b>Hint:</b></a><div
+class="ans" id="lab26">
+(a) <center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/urns.png"></th>
+</tr>
+<tr>
+<th>$\frac 26\times\frac 23+\frac 46\times\frac 13$</th>
+</tr>
+</table>
+</center>
+
+<p></p>
+(b) Focus only on the upper path in the diagram above: $\frac{ \frac{2}{6}\times\frac{2}{3} }{ \frac{2}{6}\times\frac{2}{3}+\frac{4}{6}\times\frac{1}{3} }$
+</div></p>
 
 </p>
 
@@ -1404,6 +1594,10 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab27')"><b>Hint:</b></a><div
+class="ans" id="lab27">The first is more likely to give an over estimate, since employees in larger car pools are
+ more likely to be selected. The second is better.</div></p>
 
 </p>
 
@@ -1419,6 +1613,22 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab28')"><b>Hint:</b></a><div
+class="ans" id="lab28">Let $\Omega=$ all the ways the deck may be ordered. Then $|\Omega|=52!$  and we
+ assume that all these are equally likely.  
+<p></p>
+Let $A=$ the event that the first 19 are non aces and the 20-th is an ace.
+<p></p>
+Let $B=$ the event that the 21-st is the ace of spades.
+<p></p>
+Let $C=$ the event that the 21-st is the two of clubs.
+<p></p>
+To find $P(B|A)=\frac{P(A\cap B)}{P(A)}$  and $P(C|A)=\frac{P(A\cap C)}{P(A)}.$
+<p></p>
+Here $|A|=4\times 51\times\cdots\times(51-19+1)$, $|A\cap B| = 1\times 3\times
+ 50\times\cdots\times(50-19+1)$  and $|A\cap B| = 1\times 4\times 50\times\cdots\times(50-19+1).$
+</div></p>
 
 </p>
 
@@ -1434,6 +1644,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab29')"><b>Hint:</b></a><div
+class="ans" id="lab29"></div></p>
 
 </p>
 
@@ -1449,6 +1662,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab30')"><b>Hint:</b></a><div
+class="ans" id="lab30"></div></p>
 
 </p>
 
@@ -1464,6 +1680,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab31')"><b>Hint:</b></a><div
+class="ans" id="lab31"></div></p>
 
 </p>
 
@@ -1479,6 +1698,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab32')"><b>Hint:</b></a><div
+class="ans" id="lab32"></div></p>
 
 </p>
 
@@ -1494,6 +1716,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab33')"><b>Hint:</b></a><div
+class="ans" id="lab33"></div></p>
 
 </p>
 
@@ -1509,6 +1734,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab34')"><b>Hint:</b></a><div
+class="ans" id="lab34"></div></p>
 
 </p>
 
@@ -1524,6 +1752,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab35')"><b>Hint:</b></a><div
+class="ans" id="lab35"></div></p>
 
 </p>
 
@@ -1539,6 +1770,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab36')"><b>Hint:</b></a><div
+class="ans" id="lab36"></div></p>
 
 </p>
 
@@ -1554,6 +1788,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab37')"><b>Hint:</b></a><div
+class="ans" id="lab37"></div></p>
 
 </p>
 
@@ -1569,6 +1806,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab38')"><b>Hint:</b></a><div
+class="ans" id="lab38"></div></p>
 
 </p>
 
@@ -1584,6 +1824,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab39')"><b>Hint:</b></a><div
+class="ans" id="lab39"></div></p>
 
 </p>
 
@@ -1599,6 +1842,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab40')"><b>Hint:</b></a><div
+class="ans" id="lab40">9.</div></p>
 
 </p>
 
@@ -1614,6 +1860,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab41')"><b>Hint:</b></a><div
+class="ans" id="lab41"></div></p>
 
 </p>
 
@@ -1629,6 +1878,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab42')"><b>Hint:</b></a><div
+class="ans" id="lab42"></div></p>
 
 </p>
 
@@ -1644,6 +1896,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab43')"><b>Hint:</b></a><div
+class="ans" id="lab43"></div></p>
 
 </p>
 
@@ -1659,6 +1914,14 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab44')"><b>Hint:</b></a><div
+class="ans" id="lab44">You may either list all the paths and then compute the
+probability of their union using inclusion-exclusion, or you may
+you conditional probability. In the latter approach, you take
+the switches one by one, and consider the cases when it is on and
+when it is off. This approach is better for complicated circuits.
+</div></p>
 
 </p>
 
@@ -1674,6 +1937,19 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab45')"><b>Hint:</b></a><div
+class="ans" id="lab45">
+$A_i=$ {first throw shows $i$ } for $i=2,3,...,12.$
+<p></p>
+Let $p_i = P(A_i).$  
+<p></p>
+Then $P(win)=\sum_i p_iP(win|A_i).$
+<p></p>
+It is easy to compute $p_i$'s. Also $P(win|A_7) = P(win|A_{11}) = 1$  and $P(win|A_i) = 0$  for $i=2,3,12.$ 
+<p></p>
+For any other $i$  we have $P(win|A_i) = p_i + (1-p_i-p_7)p_i + (1-p_i-p_7)^2p_i + \cdots = \frac{p_i}{p_i+p_7}.$
+</div></p>
 
 </p>
 
@@ -1689,6 +1965,9 @@ So the required conditional probability is $\frac{7}{11}.$
 </table>
 </center>
 
+<p><a
+href="javascript:hideShow('lab46')"><b>Hint:</b></a><div
+class="ans" id="lab46">Don't replace.</div></p>
 
 </p>
 
@@ -1699,9 +1978,9 @@ add $c$ more balls of that color. We continue this process
 again and again. What is the probability that at the $n$-th
 stage the ball drawn will be red? Does the probability depend
 on $n?$
-<p>
-<b>Hint:</b>
-<blockquote>
+<p><a
+href="javascript:hideShow('lab47')"><b>Hint:</b></a><div
+class="ans" id="lab47">
 Let $X_n$ be the colour of the $n$-th ball drawn. Then 
 $
 \newcommand{\red}{\mathrm{red}}
@@ -1722,11 +2001,7 @@ By induction hypothesis, this is $\frac{a+c}{a+b+c}.$
 Similarly, $P(X_n=\red|X_1=\grn) = \frac{a}{a+b+c}.$
 <p></p>
 Now the result follows immediately.
-</blockquote>
-</p>
-
-<p></p>
-
+</div></p>
 
 </p>
 
@@ -1735,6 +2010,9 @@ Now the result follows immediately.
 numbers $m &lt; n.$ What is the probability that the ball
 drawn at stage $m$ is green and the ball drawn at
 stage $n$ is red? Does the answer depend on $m$ and $n$?
+<p><a
+href="javascript:hideShow('lab48')"><b>Hint:</b></a><div
+class="ans" id="lab48"></div></p>
 
 </p>
 
