--- a/prob1_2024/vit.html
+++ b/prob1_2024/vit.html
@@ -175,7 +175,7 @@ A proof of this may be given like this:
  0.$  Hence $P(A)=0.$  Hence $P(A^c)=1,$  <i>i.e.</i>, we are bound to get a head some time or other.</blockquote>
 However, we must understand that in order to write $A_n\searrow A$, we need all the $A_n$'s and $A$  to be
  subsets of some common $\Omega.$  Each element of this  $\Omega$  is an infinite sequence of heads and tails.
- If you feel uncomfortable with sets of ininite sequences, just think of $\Omega$  as the set of all functions from
+ If you feel uncomfortable with sets of infinite sequences, just think of $\Omega$  as the set of all functions from
  ${\mathbb N}$  to $\{H,T\}.$  
 <p></p>
 
@@ -199,7 +199,7 @@ Now define $\omega$  as the sequence that flips the diagonal entries (shown in r
 <p></p>
 In our example, 
 <blockquote>$\omega=$  T T T H H T ...</blockquote>
-Clearly, this $\omega$  is distinct rom all the $\omega_i$'s (since the $i$-th entry of  $\omega$  is
+Clearly, this $\omega$  is distinct from all the $\omega_i$'s (since the $i$-th entry of  $\omega$  is
  different from that of $\omega_i$).  
 <p></p>
 But this contradicts the assumption that the $\omega_i$'s constitute an enumeration of $\Omega.$
@@ -209,7 +209,7 @@ But this contradicts the assumption that the $\omega_i$'s constitute an enumerat
 So far in our course, we were working with countable (finite/infinite)  $\Omega.$  For these we considered a probability
  to be a mapping from ${\mathcal P}(\Omega)$  to $[0,1].$   In other words, we could defined $P(A)$  for <i>every</i> 
  $A\subseteq\Omega.$  Unfortunately this may fail when $\Omega$  is uncountable. Here we may have "bad" subsets of $\Omega$ 
- for whcih probability cannot be defined. 
+ for which probability cannot be defined. 
 <p></p>
 We shall discuss such an example next. 
 <p></p>
@@ -256,20 +256,20 @@ have $P(A) = P(A+\theta).$</li>
 
 </ul>
 Thus, we are claiming that we cannot have a function $P$
- definied on the entire power set of $\Omega$ that satisfies
+ defined on the entire power set of $\Omega$ that satisfies
  the three probability axioms as well as these two extra conditions.
 <p></p>
 
 <p></p>
  We shall provide  a quick proof of
-this here by contradiction. Let, if posible, there be such a
+this here by contradiction. Let, if possible, there be such a
 function $P.$ We shall demonstrate a "bad" set $M$ for
 which $P(M)$ cannot be defined, contradicting the assumption
 that $P$ is defined for all subsets of $\Omega.$ 
 <p></p>
 So in this scenario, we have
 to leave out "bad" sets like this from $\ev.$ However, 
-all subsets that we shall ever need for practical pursposes are
+all subsets that we shall ever need for practical purposes are
 still in $\ev.$ That is why, this technical point may safely
 be ignored during a first course on probability.
 <p></p>
@@ -413,7 +413,7 @@ But as you can see, such "bad" sets are pretty difficult to come
 across. So ignoring them will never cause any problem during our
 course. 
 <p></p>
-Still, to keep our discussion general, we need to modify the defintion of probability slightly.
+Still, to keep our discussion general, we need to modify the definition of probability slightly.
 Hence we should learn the following terminology.
 <p></p>
  The modification will consist of an explicit specification of the "good" sets. In other words,
@@ -438,7 +438,7 @@ Let $\Omega$  be any non-empty set. Then any non-empty ${\mathcal F}\subseteq{\m
 <p></p>
 
 <p>
-<b>EXAMPLE 1:</b>&nbsp;For any non-empty $\Omega$  we have the following two $\sigma$-algbras:
+<b>EXAMPLE 1:</b>&nbsp;For any non-empty $\Omega$  we have the following two $\sigma$-algebras:
  $\{\phi,\Omega\}$  and ${\mathcal P}(\Omega).$  In all our examples with countable
  $\Omega$, we were using the latter.  ■
 </p>
@@ -458,7 +458,7 @@ By a <b><font color="red" size="40">probability space</font></b>  we mean $(\Ome
 The elements of ${\mathcal F}$  are called <b><font color="red" size="40">event</font></b>s. 
 <p></p>
 Also, we want ${\mathcal F}$ 
- to contain all the subsets that we care about in a given problem. So it is only naturall that we choose ${\mathcal F}$ 
+ to contain all the subsets that we care about in a given problem. So it is only natural that we choose ${\mathcal F}$ 
  differently for different problems. There are two approaches: In the first approach, we
  characterise the "bad" sets and eliminate them from ${\mathcal P}(\Omega).$  In the other approach (the more popular
  one) we list all the sets that we want to work with and consider the smallest $\sigma$-algebra containing them. 
